--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/main.js",
-    "dev": "nodemon main.ts",
+    "start": "node dist/app.js",
+    "dev": "nodemon src/main.ts",
     "build": "tsc -p ."
   },
   "author": "dharnzkraft",
